--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: xxxgod Blog
+title: xgod Blog
 subtitle: ''
 description: ''
 keywords:
-author: xxxgod
+author: xgod
 language: zh-CN	#语言
 timezone: Asia/Shanghai    #中国的时区
 
